css/index.css
/* ... */
/*响应式尺寸*/

/*@media (min-height: 1200px) {*/

/*}*/

.col-1-of-3 .card {
    -webkit-perspective: 150rem;
    perspective: 150rem;
    -moz-perspective: 150rem;
    position: relative;
    height: 13.5rem;
}

.card__side {
    height: 13rem;
    -webkit-transition: all 0.8s ease;
    transition: all 0.8s ease;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    margin: 4px 4px 4px 4px;
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
    border-radius: 10px;
    overflow: hidden;
    -webkit-box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
    box-shadow: 0 0 10px rgba(184, 197, 214, .5);
    -moz-box-shadow: 0 0 10px rgba(184, 197, 214, .5);
}

.card__side:hover {
    box-shadow: 0 0 10px #7e8795;
    -moz-box-shadow: 0 0 10px #7e8795;
}

.card__side--front {background-color: #fff;}
.card__side--front-1 {background: linear-gradient(-45deg, #f403d1, #64b5f6);}
.card__side--front-2 {background: linear-gradient(-45deg, #f321d7, #ffec61);}
.card__side--front-3 {background: linear-gradient(-45deg, #24ff72, #9a4eff);}
.card__side--front-4 {background: linear-gradient(-45deg, #171925, #325fb1);}
.card__side--front-5 {background: #fff;}
.card__side--front-6 {background-size: 100% auto;}
.card__side--back {-webkit-transform: rotateY(180deg);transform: rotateY(180deg);}
.card__side--back-1 {background: linear-gradient(-45deg, #64b5f6, #f403d1);}
.card__side--back-2 {background: linear-gradient(-45deg, #ffec61, #f321d7);}
.card__side--back-3 {background: linear-gradient(-45deg, #9a4eff, #24ff72);}
.card__side--back-4 {background: linear-gradient(-45deg, #325fb1, #171925);}
.card__side--back-5 {background: #fff;}
.card__side--back-6 {background: #fff;}
.card:hover .card__side--front-1,
.card:hover .card__side--front-2,
.card:hover .card__side--front-3,
.card:hover .card__side--front-4,
.card:hover .card__side--front-5,
.card:hover .card__side--front-6{-webkit-transform: rotateY(-180deg);transform: rotateY(-180deg);}
.card:hover .card__side--back {
    -webkit-transform: rotateY(0);
    transform: rotateY(0);
}

.row {
    /* max-width: 114rem; */
    margin: 0 auto;
}

.row::after {
    content: "";
    display: table;
    clear: both;
}

.row [class^="col-"] {
    float: left;
}

.col-1-of-3 {
    width: 47%;
    padding-right: 5px;
}

@media screen and (max-width: 1200px) {
    .col-1-of-3 {
    width: 100%;
    }
    .card__side {
    height: 13rem;
    -webkit-transition: all 0.8s ease;
    transition: all 0.8s ease;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
    border-radius: 20px;
    overflow: hidden;
    -webkit-box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
    }
}

@media screen and (max-width: 1200px) {
    .article {
        max-width: 100%;
        width: 100%;
        margin: 0 auto;
        padding-top: 60px;
        padding-bottom: 10px;
    }

    .headpic {
        display: none;
    }

    .headpic-cover {
        display: none;
    }
    .left-holder {
        width: 96%;
        margin: 0 2%;
        clear: both;
    overflow: hidden;
    }

    .result-box {
        width: 96%;
        margin: 0 2%;
        clear: both;
    }

    .right-holder {
        width: 96%;
        margin: 0 2%;
        clear: both;
    overflow: hidden;
    }

    #article-holder {
        width: 100%;
    }

    .button-prev {
        top: 50%;
        left: 15px;
    }

    .button-next {
        top: 50%;
        right: 15px;
    }

    .article-box {
        width: 98%;
        height: auto;
        margin: 8px 1%;
    }
    .choosen-box {
        width:25px;
        height:32px;
        background-color:rgb(180, 180, 180);
        margin: 0 auto;
        float:left;
        text-align:center;
        font-size:20px;
        border-radius: 4px;
        box-shadow: 0 0 10px rgba(184, 197, 214, .5);
        -moz-box-shadow: 0 0 10px rgba(184, 197, 214, .5);
        overflow: hidden;
        transition: all 0.6s;
    }
    .choosen-box:hover {
        box-shadow: 0 0 10px #767676;
        transform: scale(1.15); 
    }

    .ab-content {
        width: 100%;
        margin: 0;
        padding-bottom: 10px;
    }

    .article-title {
        width: 94%;
        height: 40px;
        line-height: 40px;
        margin-left: 3%;
    }

    .article-title a {
        width: 100%;
        float: left;
        font-size: 18px;
    }

    .article-cate {
        width: 96%;
        margin: 2px 2%;
    }

    .article-cate a {
        font-size: 13px;
    }

    .article-img-box {
        display: none;
        /* float: left;
        width: 100%;
        height: auto;
        margin: 10px 0 0 2%;
        overflow: hidden; */
    }

    .article-detail-box {
        display: none;
        /* width: 94%;
        height: 75px;
        margin: 8px 3%;
        line-height: 25px;
        -webkit-line-clamp: 3; */
    }

    .article-tail-box {
        float: left;
        height: 30px;
        width: 98%;
        line-height: 30px;
        margin: 5px 1%;
    }

    .column-container {
        width: 98%;
        margin: 6px 1%;
        font-size: 14px;
    }

    .column-container a {
        font-size: 14px;
    }

    .column-container-wider {
        width: 98%;
        margin: 6px 1%;
        font-size: 14px;
    }

    .column-container-wider a {
        font-size: 14px;
    }

    .column_box .column-title {
        height: 45px;
        line-height: 45px;
    }

    .column_box .column-category {
        height: 45px;
        line-height: 45px;
    }

    #pagination {
        text-align: center;
    }
}
/* ... */

